--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
     <div id="quizz">
         <p id="ques"></p>
         <br>
-        <input onclick="tick()" type="radio" name="quiz" id="">
+        <input onclick="tick()" type="radio" name="quiz" id="1" value="1">
         <label id="option1"></label>
         <br><br>
-        <input onclick="tick()" type="radio" name="quiz" id="">
+        <input onclick="tick()" type="radio" name="quiz" id="2" value="2">
         <label id="option2"></label>
         <br><br>
-        <input onclick="tick()" type="radio" name="quiz" id="">
+        <input onclick="tick()" type="radio" name="quiz" id="3" value="3">
         <label id="option3"></label>
         <br><br>
         <button id="btn" onclick="nextQuestion()">Next</button>
     </div>
+    <p id="update"></p>
 </body>
 <script src="app.js"></script>
 </html>
