--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
         <h1>HTML Quiz</h1>
+        <br><br>
         <p id="timer" style="color: red; font-weight: bold;">00:20</p>
     </div>
     <div id="quizz">
