--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
         <h1>HTML Quiz</h1>
         <br><br>
-        <p id="timer" style="color: red; font-weight: bold;">00:20</p>
+        <p id="timer" >0:20</p>
     </div>
     <div id="quizz">
         <p id="ques"></p>
